WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210143
[iPadOS] Unable to toggle subpages on sites.google.com
https://bugs.webkit.org/show_bug.cgi?id=210143
Summary
[iPadOS] Unable to toggle subpages on sites.google.com
Antoine Quint
Reported
2020-04-07 12:43:52 PDT
[iPadOS] Unable to toggle subpages on sites.google.com
Attachments
Patch
(2.98 KB, patch)
2020-04-07 12:46 PDT
,
Antoine Quint
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2020-04-07 12:46:12 PDT
Created
attachment 395725
[details]
Patch
Antoine Quint
Comment 2
2020-04-07 12:46:17 PDT
<
rdar://problem/58653069
>
Brent Fulgham
Comment 3
2020-04-07 12:56:44 PDT
Comment on
attachment 395725
[details]
Patch r=me.
Antoine Quint
Comment 4
2020-04-08 00:46:38 PDT
Committed
r259706
: <
https://trac.webkit.org/changeset/259706
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug