[iPadOS] Unable to toggle subpages on sites.google.com https://bugs.webkit.org/show_bug.cgi?id=210143 <rdar://problem/58653069>

Reviewed by Brent Fulgham.

If a site built with sites.google.com has some sub-pages, tapping on the right-pointing arrow will not disclose the sub-pages due to preventDefault() being called
on the touchend event handler. We work around this issue by adding a new quirk that will prevent a given touch event type from being dispatched on a given element.
This quirk is only true for sites.google.com and the right-pointing arrow for the sub-pages disclosure.

* page/Quirks.cpp:
(WebCore::Quirks::shouldPreventDispatchOfTouchEvent const):
* page/Quirks.h:

Canonical link: https://commits.webkit.org/223069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259706 268f45cc-cd09-0410-ab3c-d52691b4dbfc